<resources>
    <string name="app_name">SAE_S501</string>
    <string name="se_connecte">Se connecter</string>
    <string name="connectez_v">Connectez-vous avec votre adresse e-mail</string>
    <string name="adresse_mai">Adresse Mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="mot_de_pass"><u> Mot de passe oublié ? </u></string>
    <string name="nouveau"> Vous êtes nouveau ? : <u> S’inscrire </u></string>
    <string name="panier">Panier</string>
    <string name="cout_total_text"> Coût total : </string>
    <string name="button_panier">Acheter</string>
    <string name="ajout_pub_titre">Ajouter publication</string>
    <string name="charger_img"><u>Charger une image</u></string>
    <string name="ajouter_titre_pub">Titre de l\'oeuvre</string>
    <string name="checkbox_gratuit">Gratuit</string>
    <string name="checkbox_payant">Entrez le prix</string>
    <string name="button_publier">Publier</string>
    <string name="description_pub">Description</string>

    <string name="abonnement_text">Abonnements</string>
    <string name="abonne_text">Abonnés</string>

    <string name="fil_actu_titre">Fil d\'actualité</string>
    <string name="edit_fil_actu">Rechercher</string>

    <string name="nom">Nom d\'utilisateur</string>
    <string name="descriptionproduitgratuit">Description produit </string>
    <string name="visualiser_img">Visualiser image</string>
    <string name="ajouter_panier">Ajouter au panier</string>
    <string name="ajouter_commentaire">Ajouter un commentaire</string>
    <string name="commentaire_personne">Commentaire de la personne</string>
    <string name="prix_payant">Prix de l\'article</string>
    <string name="telecharger">Telecharger article</string>
    <string name="nomutilisateur">Nom d\'utilisateur</string>
    <string name="nomUtilisateur">Nom d\'utilisateur</string>
    <string name="notification">Notification</string>
    <string name="date">Date</string>
    <string name="nomutilisateur2">Nom d\'utilisateur</string>
    <string name="date1">Date</string>
    <string name="date2">Date</string>
    <string name="date3">Date</string>
    <string name="notification0">notification</string>
    <string name="notification1">notification</string>
    <string name="notification2">notification</string>
    <string name="notification3">notification</string>
    <string name="publications">Mes publications</string>

    <string name="text_connexion_mail">Adresse mail :</string>
    <string name="edit_connexion_mail">Adresse mail</string>
    <string name="text_connexion_mdp">Mot de passe :</string>
    <string name="edit_connexion_mdp">Mot de passe</string>
    <string name="mdp_oublie"><u>mot de passe oublié ?</u></string>
    <string name="btn_connexion">Se connecter</string>
    <string name="text_nouveau_venu">Êtes-vous nouveau ?</string>
    <string name="text_vers_inscription"><u>S\'inscrire</u></string>

    <string name="pseudo">Pseudo</string>
    <string name="adresse_mail">Email</string>
    <string name="editpseudo">Pseudo</string>
    <string name="faire_recherche">Rechercher</string>
    <string name="description_rea">Description Réalisation</string>
    <string name="numero_rea">Numéro réalisation</string>
    <string name="numero_rea2">Numéro réalisation</string>
    <string name="description_rea2">Description Réalisation</string>
    <string name="numero_rea3">Numéro réalisation</string>
    <string name="description_rea3">Description Réalisation</string>
    <string name="btn_inscription">S\'inscrire</string>
    <string name="btn_valider">Valider</string>

    <string name="hint_adresse_e_mail">Adresse e-mail</string>
    <string name="hint_mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="inscrivez_vous">Inscrivez-vous !</string>
    <string name="vous_avez_d_j_un_compte_se_connecter">Vous avez déjà un compte ? : Se connecter</string>
    <string name="checkbox_public">Publique</string>
    <string name="checkbox_prive">Privée</string>
    <string name="upload"><u>Téléverser_modèle_3D_</u></string>
    <string name="fichierajoute"><i> : Fichier 3D ajouté</i></string>
    <string name="fichier_pas_ajoute"><i> : Aucun fichier ajouté</i></string>
    <string name="motcle_pub">Mots clés : (exemple : #mot)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="aides">Aide</string>
    <string name="modifier_profil">Modifier Profil</string>
    <string name="anglais">Anglais</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="supprimer_utilisateur" >Supprimer mon compte</string>
    <string name="description_pub_gratuit" />
    <string name="titre_pub_gratuit" />
    <string name="pseudo_pub_gratuit" />
    <string name="visualiser_img_gratuit">Visualiser l\'article</string>
    <string name="telecharger_img_gratuit">Télécharger l\'article</string>
    <string name="text_commentaires_gratuit">"Commentaires : "</string>
    <string name="ajout_commentaire_gratuit">Ajouter un commentaire</string>
    <string name="btn_validation_gratuit">Valider</string>
    <string name="payer_img_payant">Ajouter au panier</string>
    <string name="adresse_de_l_admin">Adresse mail de l\'admin :</string>
    <string name="veuillez_d_crire_votre_probl_me">Veuillez décrire votre problème</string>
    <string name="d_crire_le_probl_me">Décrire le problème</string>
    <string name="retour">Retour</string>
    <string name="aide">Aide</string>
    <string name="achats">Mes Achats</string>
    <string name="mon_compte">Mon compte</string>

    <string name="nav_home">Accueil</string>
    <string name="nav_profile">Mon Profil</string>
    <string name="nav_publication">Mes publications</string>
</resources>