<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17282D"
    tools:context=".AjoutPublication"
    >


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background" />
    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/croix_cercle_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/ajout_pub_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/ajout_pub_titre"
            android:textAppearance="@style/se_connecte"/>

        <!--Contient attributs (avant description) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225sp"
            android:orientation="horizontal">

            <!-- Image et lien pour changer image-->
            <LinearLayout
                android:layout_width="180sp"
                android:layout_height="220sp"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <ImageView
                    android:id="@+id/imageViewPub"

                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="25sp"
                    android:background="@color/transparent"

                    />
                <TextView
                    android:id="@+id/charger_img"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:text="@string/charger_img"
                    android:textSize="17sp"
                    android:textColor="#FFA500"
                    android:clickable="true"
                    android:layout_marginLeft="25sp"
                    android:gravity="center"
                    android:onClick="chargerImage" />

            </LinearLayout>

            <!-- Titre, copyright et valeur monétaire-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTitle"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="200sp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25sp"
                    android:hint="@string/ajouter_titre_pub"
                    android:textColorHint="#00BA8D"
                    android:gravity="center"
                    android:inputType="text"
                    android:textColor="#00BA8D"/>

                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:src="@drawable/copyright"
                    android:layout_marginTop="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp">

                    <CheckBox
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/checkbox_gratuit"
                        android:layout_width="100sp"
                        android:layout_height="50sp"
                        android:text="@string/checkbox_gratuit"
                        android:textColor="@color/white"
                        android:paddingRight="5sp"
                        android:layout_gravity="center"
                       />

                    <EditText
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        style="@style/CustomEditTextStyle"
                        android:id="@+id/checkbox_payant"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/checkbox_payant"
                        android:background="@color/white"
                        android:textColorHint="#00BA8D"
                        android:layout_marginLeft="10sp"
                        android:paddingRight="5sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="12sp"
                        android:textColor="#00BA8D"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/EditTextMotCle"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:background="@color/white"
                android:gravity="left"
                android:hint="@string/motcle_pub"
                android:textColor="#00BA8D"
                android:paddingLeft="10dp"
                android:layout_marginBottom="16dp"
                />
            <EditText
                android:id="@+id/EditTextDescription"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:background="@color/white"
                android:gravity="left"
                android:hint="@string/description_pub"
                android:textColor="#00BA8D"
                android:paddingLeft="10dp"
                />



            <CheckBox
                android:id="@+id/prive"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_marginLeft="20sp"
                android:paddingRight="5sp"
                android:text="@string/checkbox_prive"
                android:textColor="@color/white" />

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- TextView Upload -->
            <TextView
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginLeft="25sp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/upload"
                android:textColor="#FFA500"
                android:textSize="17sp" />

            <!-- TextView Fichier Ajouté -->
            <TextView
                android:id="@+id/fichierajoute"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="15sp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/fichier_pas_ajoute"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

            <Button
                android:id="@+id/bouton_publier"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:background="@drawable/custom_button_background"
                android:text="@string/button_publier"
                android:textAppearance="@style/se_connecte" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>